--- a/app/views/public/posts/_index_nopage.html.erb
+++ b/app/views/public/posts/_index_nopage.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% posts.each do |post| %>
     　<% unless post.user.is_deleted %>
-      <tr>
+      <tr class="hover-color">
         <td><%= image_tag post.get_post_image(100, 100), class: "rounded-circle"; %></td>
         <td>
           <%= link_to post_path(post.id), class: "text-dark" do %>
@@ -64,3 +64,18 @@
 <!--    <div class="col-4"></div>-->
 <!--  <%# end %>-->
 <!--</div>-->
+
+<style>
+  .hover-color {
+    background-color: #FFFFFF;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all  0.3s ease;
+  }
+
+  .hover-color:hover {
+    background-color: #dcdcdc;
+    /*cursor: pointer;*/
+  }
+</style>
