--- a/app/views/admin/users/_index.html.erb
+++ b/app/views/admin/users/_index.html.erb
@@ -12,7 +12,7 @@
 
   <tbody>
     <% users.each do |user| %>
-      <tr>
+      <tr class="hover-color">
         <td>
           <%= user.id %>
         </td>
@@ -36,3 +36,18 @@
     <% end %>
   </tbody>
 </table>
+
+<style>
+  .hover-color {
+    background-color: #FFFFFF;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all  0.3s ease;
+  }
+
+  .hover-color:hover {
+    background-color: #dcdcdc;
+    /*cursor: pointer;*/
+  }
+</style>
