--- a/app/views/public/users/_index.html.erb
+++ b/app/views/public/users/_index.html.erb
@@ -12,7 +12,7 @@
 
   <tbody>
     <% users.each do |user| %>
-      <tr class="hover-color">
+      <tr class="hover-color shadow-sm">
         <td class="text-center">
           <%= image_tag user.get_profile_image(50, 50), class:"rounded-circle"; %>
         </td>
