[Edit]users_spec

--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -38,6 +38,7 @@
   <% col = count != 3 ? (3-(count%3)) : 0 %>
   <!--上記の結果の場合、for文で1から2までを繰り返し、その文col-4のdivタグを挿入する-->
   <% for num in 1..col %>
+    <!--<div class="mt-1 mr-2 ml-1 mb-1 px-0 col-4"></div>-->
     <div class="col-4"></div>
   <% end %>
 </div>
