--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -15,9 +15,9 @@
         <%= f.text_field :title, placeholder:"タイトルをここに", autofocus: true, class: "form-control" %>
       </div>
       <div class="form-group">
-        <!--:genre_nameはpostに紐づいたジャンルモデルのnameという意味?-->
+        <!--ここで指定した:genre_nameはcreateアクションに送られる-->
         <%= f.label :genre_name, "ジャンル(半角スペースで複数ジャンル付けできます)" %> <i class="fa-solid fa-pen-clip"></i>
-        <%= f.text_field :genre_name, placeholder:"ジャンルをここに", class: 'form-control' %>
+        <%= f.text_field :genre_name, placeholder:"ジャンルをここに", class: 'form-control', value: @genre_list&.join(' ') %>
       </div>
       <div class="form-group">
         <%= f.label :body, "投稿本文" %> <i class="fa-solid fa-pen-clip"></i>
