--- a/app/views/public/groups/_form.html.erb
+++ b/app/views/public/groups/_form.html.erb
@@ -12,7 +12,7 @@
    <div class="form-group">
     <!--:tag_nameはgroupに紐づいたタグモデルのnameという意味?-->
     <%= f.label :tag_name, "タグ(半角スペースで複数タグ付けできます)" %> <i class="fa-solid fa-pen-clip"></i>
-    <%= f.text_field :tag_name, placeholder:"タグをここに", class: 'form-control' %>
+    <%= f.text_field :tag_name, placeholder: "タグをここに", class: 'form-control', value: @tag_list&.join(' ') %>
    </div>
 
   <div class="form-group">
