--- a/app/views/public/post_comments/_index.html.erb
+++ b/app/views/public/post_comments/_index.html.erb
@@ -1,15 +1,15 @@
-<table>
+<table class="d-flex align-items-center justify-content-center">
   <tbody>
     <% post.post_comments.each do |post_comment| %>
     <tr>
-      <td>
+      <td class="space1">
         <%= link_to user_path(post_comment.user.id) do %>
-          <%= image_tag post_comment.user.get_profile_image(50, 50) %>
+          <%= image_tag post_comment.user.get_profile_image(50, 50) %><br>
           <%= post_comment.user.name %>
         <% end %>
       </td>
-      <td><%= post_comment.comment %></td>
-      <td>
+      <td class="space2"><%= post_comment.comment %><br><span class="text-muted"><%= l post_comment.created_at, format: :default %></span></td>
+      <td class="space3">
         <% if post_comment.user == current_user %>
           <%= link_to "削除する", post_post_comment_path(post_comment.post, post_comment), method: :delete, remote: true, class: "btn btn-outline-danger" %>
         <% end %>
@@ -18,3 +18,13 @@
     <% end %>
   </tbody>
 </table>
+
+<style>
+  .space1 {
+    padding-right: 20px;
+  }
+
+  .space2 {
+    padding-right: 100px;
+  }
+</style>
