--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -39,12 +39,14 @@
         </div>
      </div>
   </div>
-  <div class="row row d-flex align-items-center justify-content-center">
+  <div class="row d-flex align-items-center justify-content-center">
     <div class="col-md-8">
       <div class="post_comments">
         <%= render "public/post_comments/index", post: @post %>
       </div>
-      <%= render "public/post_comments/form", post: @post, post_comment: @post_comment %>
+      <div class="mt-2">
+        <%= render "public/post_comments/form", post: @post, post_comment: @post_comment %>
+      </div>
     </div>
   </div>
 </div>
