--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -256,3 +256,13 @@
 .average-score-display {
   font-size: 16px;
 }
+
+.index-img {
+	height: 250px;
+	object-fit: cover;
+}
+
+ .show-img {
+  height: 400px;
+  object-fit: contain;
+}
