--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -6,9 +6,9 @@
     </div>
     <div class='col-md-8'>
       <h2 class="text-center">
-        コミュニティ一覧 <i class="fa-solid fa-people-group"></i>
+        コミュニティ一覧 <i class="fa-solid fa-people-group"></i><%= link_to '#タグで探す', tags_path, class: 'class: btn btn-lg btn-outline-warning ml-2' %>
       </h2>
-      <h3 class="text-center"><%= link_to '#タグで探す', tags_path, class: 'class: btn btn-lg btn-outline-warning' %></h3>
+      <!--<h3 class="text-center"><%#= link_to '#タグで探す', tags_path, class: 'class: btn btn-lg btn-outline-warning' %></h3>-->
       <div id="index-ajax">
         <%= render 'index', groups: @groups %>
       </div>
