[Edit]post_edit

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -12,7 +12,7 @@
 
     <div class="image1 carousel-item active">
       <div class="carousel-caption d-none d-md-block">
-        <h1>朝活サポへようこそ</h1>
+        <h1>朝サポへようこそ</h1>
         <h3>〜朝活で日本を元気に〜</h3>
       </div>
     </div>
@@ -38,7 +38,7 @@
       <div class="container px-5 px-sm-0">
         <div class='row d-flex align-items-center justify-content-center'>
           <div class='col-md-12'>
-            <h2 class="text-warning">新着コミュニティ(3件)</h2>
+            <h2 class="text-warning text-center mt-2">新着コミュニティ(3件)</h2>
               <%= render 'public/homes/top_groups', groups: @groups %>
           </div>
         </div>
@@ -49,7 +49,7 @@
       <div class="container px-5 px-sm-0">
         <div class='row d-flex align-items-center justify-content-center'>
           <div class='col-md-12'>
-             <h2 class="text-warning">新着投稿(3件)</h2>
+             <h2 class="text-warning text-center mt-2">新着投稿(3件)</h2>
                <%= render 'public/homes/top_posts', posts: @posts %>
           </div>
         </div>
