--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -259,7 +259,7 @@
 
 .index-img {
 	height: 250px;
-	object-fit: fill;
+	object-fit: cover;
 }
 
  .show-img {
@@ -268,6 +268,6 @@
 }
 
  .top-index-img {
-	height: 200px;
-	object-fit: fill;
+	height: 230px;
+	object-fit: cover;
 }
