--- a/app/views/public/groups/_form_edit.html.erb
+++ b/app/views/public/groups/_form_edit.html.erb
@@ -10,9 +10,12 @@
   </div>
 
    <div class="form-group">
-    <!--:tag_nameはgroupに紐づいたタグモデルのnameという意味?-->
-    <%= f.label :tag_name, "タグは変更できません" %> <i class="fa-solid fa-pen-clip"></i>
-    <%#= f.text_field :tag_name, placeholder:"タグをここに", class: 'form-control' %>
+    <%= f.label :tag_name, "タグ(半角スペースで複数タグ付けできます)" %> <i class="fa-solid fa-pen-clip"></i>
+    <%#= fields_for(@tags&.join(' ')) do |tags| %>
+
+    <%#= tags.text_field :tag_name, placeholder:"タグをここに", class: 'form-control', value: @tags&.join(' ')  %>
+    <%# end %>
+    <%= f.text_field :tag_name, placeholder:"タグをここに", class: 'form-control', value: @tags&.join(' ')  %>
    </div>
 
   <div class="form-group">
