--- a/app/views/public/homes/_top_posts.html.erb
+++ b/app/views/public/homes/_top_posts.html.erb
@@ -1,4 +1,4 @@
-<div class="card-deck mt-5">
+<div class="card-deck mt-3s">
   <% count = 0 %>
   <% posts.each_with_index do |post, index| %>
    <% unless post.user.is_deleted %>
