--- a/app/views/public/chats/_index.html.erb
+++ b/app/views/public/chats/_index.html.erb
@@ -4,20 +4,28 @@
         <%= image_tag chat.user.get_profile_image(50, 50), class: "rounded-circle"; %>
       </div>
       <p style="text-align: right;">
-        <strong><%= chat.message %></strong><br>
-        <%= chat.created_at.strftime("%Y-%m-%d %H:%M") %>
+        <strong><span class="chat-message p-1"><%= chat.message %></span></strong><br>
+        <span class="date"><%= chat.created_at.strftime("%Y-%m-%d %H:%M") %></span>
       </p>
     <% else %>
       <div class="chat-face" style="text-align: left;">
         <%= image_tag chat.user.get_profile_image(50, 50), class: "rounded-circle"; %>
       </div>
       <p style="text-align: left;">
-        <strong><%= chat.message %></strong><br>
-        <%= chat.created_at.strftime("%Y-%m-%d %H:%M") %>
+        <strong><span class="chat-message p-1"><%= chat.message %></span></strong><br>
+        <span class="date"><%= chat.created_at.strftime("%Y-%m-%d %H:%M") %></span>
       </p>
     <% end %>
   <% end %>
   <style>
+    .chat-message {
+      background: #FFFFBB;
+      border-radius: 10px;
+    }
+
+    .date {
+      color: #CCCCCC;
+    }
   /*  nav ul.pagination {*/
   /*    display: none;*/
   /*  }*/
