--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,6 +32,10 @@
         </li>
 
         <li class="nav-item">
+          <%= link_to "チャット一覧", rooms_path, method: :get, class: 'nav-link text-dark' %>
+        </li>
+
+        <li class="nav-item">
           <%= link_to '投稿一覧', posts_path, class: 'nav-link text-dark', data: {"turbolinks"=>false} %>
         </li>
 
