--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,21 +14,30 @@
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to notifications_path do %>
+          <%= link_to notifications_path, class: 'nav-link text-dark' do %>
             <% if unchecked_notifications.any? %>
               <span class="fa-stack">
-                <i class="far fa-bell fa-lg fa-stack-2x" style="font-size: 1.5rem;"></i>
+                <!--<i class="fa-regular fa-bell"></i>-->
+                <!--<i class="fa-solid fa-circle"></i>-->
+                <!--<i class="far fa-bell fa-lg fa-stack-2x" style="font-size: 1.5rem;"></i>-->
+                <i class="far fa-bell fa-lg" style="font-size: 1.5rem;"></i>
                 <i class="fas fa-circle n-circle fa-stack-1x"></i>
               </span>
+              <!--通知-->
             <% else %>
               <span class="fa-stack">
+                <!--<i class="fa-regular fa-bell"></i>-->
+                <!--<i class="far fa-bell fa-lg" style="font-size: 1.5em;"></i>-->
                 <i class="far fa-bell fa-lg" style="font-size: 1.5em;"></i>
               </span>
+              <!--通知-->
             <% end %>
           <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to "マイページ", user_path(current_user.id), method: :get, class: 'nav-link text-dark' %>
+          <%= link_to user_path(current_user.id), method: :get, class: 'nav-link text-dark' do %>
+            <i class="fa-solid fa-circle-user"></i> マイページ
+          <% end %>
         </li>
 
         <li class="nav-item">
