--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-5 offset-md-1'>
-      <h2><%= @user.name %>さんの会員詳細</h2>
+  <div class='row d-flex align-items-center justify-content-center'>
+    <div class='col-md-5'>
+      <h2 class="mt-3"><%= @user.name %>さんの会員詳細</h2>
       <%= render 'info', user: @user %>
     </div>
   </div>
