--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -5,7 +5,7 @@
       <%= render 'public/users/info', user: @user %>
     </div>
     <div class='col-md-8'>
-      <h2 class="text-center">投稿一覧 <i class="fa-solid fa-images"></i></h2>
+      <h2 class="text-center">投稿一覧 <i class="fa-solid fa-square-pen"></i></h2>
       <div id="index-ajax">
         <%= render 'public/posts/index', posts: @posts, class: "mb-3" %>
       </div>
