--- a/app/views/public/reviews/index.html.erb
+++ b/app/views/public/reviews/index.html.erb
@@ -13,7 +13,7 @@
               <div class="star-rating-back">★★★★★</div>
             </div>
             <div class="average-score-display ml-3 pt-2">
-              <%= @group.avg_score %>点（<%= @group.reviews.count %>件のレビュー
+              <%= @group.avg_score %>点(<%= @group.reviews.count %>件のレビュー)
             </div>
           </div>
         </div>
