--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class='col-md-8'>
       <h2 class="text-center">
-        会員一覧 <i class="fa-solid fa-user-check"></i>
+        会員一覧 <i class="fa-solid fa-users-viewfinder"></i>
       </h2>
       <%= render 'index', users: @users %>
     </div>
