[edit]schedule.rb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
  /*header {*/
  /*  z-index: 1;*/
  /*}*/
-/*z-indexはposition: absolute;と一緒に使おう*/
+/*z-indexはposition: absolute;と一緒に使用する。*/
  .flash-title {
    z-index: 7;
    position: absolute;
