--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -57,3 +57,24 @@
     color: #FFD700;
   }
 </style>
+
+<script>
+// $(document).on('turbolinks:load', function () {
+//   if (location.href.indexOf(/posts/)) {
+//     // console.log("読み込まれましたposts");
+//     let scrollToOptions = {
+//         top : 0, //スクロール位置にページ最上部を指定
+//         behavior : 'smooth' //スムーズに移動させる条件を指定
+//     };
+//     //スクロールを実施する
+//     window.scrollTo(scrollToOptions);
+//     // window.scroll(0, 0);
+//   }
+// });
+
+//ページ読み込み後にページの最上部へ移動させる
+// onload = function() {
+//   location.href = "#pageTop";
+// }
+
+</script>
