--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -15,7 +15,7 @@
       <%= image_tag post.get_post_image(300, 300), class: "card-img-top index-img" %>
       <div class="card-body">
         <h4 class="card-title">
-          <%= link_to post_path(post.id), class: "text-dark" do %>
+          <%= link_to post_path(post.id), class: "text-dark",data: {"turbolinks"=>false} do %>
             <strong><i class="fa-solid fa-feather"></i><span> <%= post.title %></span></strong>
           <% end %>
         </h4>
