--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,17 @@
 <%#= stylesheet_link_tag "application", :media => "all" %>
 <header class="shadow-sm bg-white sticky-top head">
   <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" style = "margin-left: 165px;" href="/"><%= image_tag 'logo1.png', :size => '140x60' %></a>
     <div class="container">
-      <a class="navbar-brand" href="/"><%= image_tag 'logo3.png', :size => '150x80' %></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
+      <% if user_signed_in? %>
+        <div class="welcome">
+          <p class="lugin-user">ようこそ、<%= current_user.name %>さん</p>
+        </div>
+      <% end %>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
@@ -124,3 +128,9 @@
     </div>
   </nav>
 </header>
+
+<!--<style>-->
+<!--  header {-->
+<!--    height: 200px;-->
+<!--  }-->
+<!--</style>-->
