--- a/app/views/admin/post_comments/_index.html.erb
+++ b/app/views/admin/post_comments/_index.html.erb
@@ -11,7 +11,7 @@
         </td>
         <td class="space2"><%= post_comment.comment %><br><span class="text-muted"><%= l post_comment.created_at, format: :default %></span></td>
         <td>
-          <%= link_to "削除する", admin_post_post_comment_path(post_comment.post, post_comment), method: :delete, remote: true, class: "btn btn-outline-danger" %>
+          <%= link_to "削除する", admin_post_post_comment_path(post_comment.post, post_comment), "data-confirm" => "本当に削除しますか？", method: :delete, remote: true, class: "btn btn-outline-danger" %>
         </td>
       </tr>
       <% end %>
