--- a/app/views/admin/posts/_index.html.erb
+++ b/app/views/admin/posts/_index.html.erb
@@ -29,7 +29,7 @@
           コメント数:<%= link_to post.post_comments.count, admin_post_post_comments_path(post.id) %>
         </td>
         <td>
-          <%= link_to "削除する", admin_post_path(post.id), method: :delete, class: "btn btn-outline-danger" %>
+          <%= link_to "削除する", admin_post_path(post.id), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-outline-danger" %>
         </td>
       </tr>
     <% end %>
