--- a/app/views/public/post_comments/_index.html.erb
+++ b/app/views/public/post_comments/_index.html.erb
@@ -11,7 +11,7 @@
       <td class="space2"><%= post_comment.comment %><br><span class="text-muted"><%= l post_comment.created_at, format: :default %></span></td>
       <td class="space3">
         <% if post_comment.user == current_user %>
-          <%= link_to "削除する", post_post_comment_path(post_comment.post, post_comment), method: :delete, remote: true, class: "btn btn-outline-danger" %>
+          <%= link_to "削除する", post_post_comment_path(post_comment.post, post_comment), method: :delete, remote: true, class: "btn btn-outline-danger", "data-confirm" => "本当に削除しますか？" %>
         <% end %>
       </td>
     </tr>
