--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Admin::Groups#index</h1>
-<p>Find me in app/views/admin/groups/index.html.erb</p>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-10 offset-md-1'>
+      <h2>コミュニティ一覧</h2>
+      <%= render 'admin/groups/index', groups: @groups, class: "mb-3" %>
+    </div>
+  </div>
+</div>
