--- a/app/views/admin/groups/show.html.erb
+++ b/app/views/admin/groups/show.html.erb
@@ -1,2 +1,65 @@
-<h1>Admin::Groups#show</h1>
-<p>Find me in app/views/admin/groups/show.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-12'>
+        <div class="card-list-container py-5">
+          <h2 class="text-center">コミュニティ詳細ページ <i class="fa-solid fa-users-line"></i></h2>
+            <div class="card w-50 mx-auto mt-4 shadow-lg" id="group_<%= @group.id %>">
+              <%= image_tag @group.get_image(300, 300), class: "card-img-top show-img" %>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-3">
+                  <% if !@owner.is_deleted %>
+                    <%= link_to admin_user_path(@owner), data: {"turbolinks"=>false} do %>
+                      <%= image_tag @owner.get_profile_image(100, 100), class:"mt-3 rounded-circle"; %>
+                      <p class="text-center text-dark"><作成者><br><strong><%= @owner.name %></strong>さん</p>
+                    <% end %>
+                  <% else %>
+                      <%= image_tag 'no_image.jpg', :size => '100x100', class:"mt-3 rounded-circle"; %>
+                      <p class="text-center text-dark"><作成者><br><strong>退会済みユーザ</strong>さん</p>
+                  <% end %>
+
+                </div>
+                <div class="col-9">
+                  <h6 class="card-title">
+                    <strong><i class="fa-regular fa-chess-queen"></i> <span><%= @group.name %></span></strong>
+                  </h6>
+                  <p class="card-text"><%= @group.introduction %></p>
+
+                  <div class="content average-score">
+                    <div class="star-rating mb-2">
+                      <div class="star-rating-front" style="width: <%= @group.review_score_percentage %>%">★★★★★</div>
+                      <div class="star-rating-back">★★★★★</div>
+                    </div>
+                    <div class="average-score-display ml-3 pt-2">
+                      <%= @group.avg_score %>点（<%= @group.reviews.count %>件のレビュー）
+                    </div>
+                  </div>
+                  <%= link_to "削除", admin_group_path(@group.id), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-outline-danger" %>
+                  <%= link_to "レビュー一覧を見る", admin_group_reviews_path(@group), class: "btn btn-outline-info" %>
+                  <!--ここにメール作成ボタンも追加-->
+                  <%#= link_to 'メンバーに連絡する', group_new_mail_path(@group), class: "btn btn-outline-warning" %>
+                  <ul class="list-group list-group-flush group-member mt-3">
+                    <%= render 'public/groups/member', group: @group %>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+           <div class="card-footer">
+            <span><strong>タグ: </strong></span>
+            <% @group.tags.each do |tag| %>
+              <span class="text-warning"><%= tag.name %></span>
+            <% end %>
+           </div>
+        </div>
+        </div>
+     </div>
+  </div>
+</div>
+
+
+<style>
+  .fa-users-line {
+    color: #FFD700;
+  }
+</style>
