--- a/app/views/public/announcements/edit.html.erb
+++ b/app/views/public/announcements/edit.html.erb
@@ -26,7 +26,7 @@
       <div class="form-group">
         <%= f.submit class: 'btn btn-outline-warning' %>
         <% if @announcement.user == current_user %>
-          <%= link_to "delete", user_announcement_path(@announcement.user, @announcement), method: :delete, class: 'btn btn-outline-danger' %>
+          <%= link_to "削除する", user_announcement_path(@announcement.user, @announcement), method: :delete, "data-confirm" => "本当に削除しますか？", class: 'btn btn-outline-danger' %>
         <% end %>
       </div>
     <% end %>
