--- a/app/views/public/post_comments/_form.html.erb
+++ b/app/views/public/post_comments/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: [post, post_comment], url: post_post_comments_path(post.id), local: false do |f| %>
   <%#= f.text_area :comment, autofocus: true, placeholder: "コメントをここに", class: "w-100" %>
-  <%= f.text_area :comment, placeholder: "コメントをここに", autofocus: true, class: "form-control" %>
+  <%= f.text_area :comment, placeholder: "コメントをここに", class: "form-control" %>
   <%= f.submit "送信する", class: "btn btn-outline-warning mt-2 mb-2" %>
 <% end %>
