--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
       </button>
       <% if user_signed_in? %>
         <div class="welcome">
-          <p class="lugin-user">ようこそ、<%= current_user.name %>さん</p>
+          <p class="login-user">ようこそ、<%= current_user.name %>さん</p>
         </div>
       <% end %>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
