--- a/app/views/public/groups/_form_edit.html.erb
+++ b/app/views/public/groups/_form_edit.html.erb
@@ -15,7 +15,7 @@
 
     <%#= tags.text_field :tag_name, placeholder:"タグをここに", class: 'form-control', value: @tags&.join(' ')  %>
     <%# end %>
-    <%= f.text_field :tag_name, placeholder:"タグをここに", class: 'form-control', value: @tags&.join(' ') %>
+    <%= f.text_field :tag_name, placeholder:"タグをここに", class: 'form-control', value: @tag_list&.join(' ') %>
   </div>
 
   <div class="form-group">
