--- a/app/views/public/homes/_top_groups.html.erb
+++ b/app/views/public/homes/_top_groups.html.erb
@@ -7,7 +7,7 @@
       <div class="card-body">
         <h4 class="card-title">
           <%= link_to new_user_registration_path, class: "text-dark" do %>
-            <strong><i class="fa-solid fa-people-group"></i></i><span> <%= group.name %></span></strong>
+            <strong><i class="fa-solid fa-people-group"></i></i><span> <%= group.name.truncate(9) %></span></strong>
           <% end %>
         </h4>
         <p class="card-text">
