--- a/app/views/public/homes/_top_posts.html.erb
+++ b/app/views/public/homes/_top_posts.html.erb
@@ -7,7 +7,7 @@
       <div class="card-body">
         <h4 class="card-title">
           <%= link_to new_user_registration_path, class: "text-dark" do %>
-            <strong><i class="fa-solid fa-feather"></i><span> <%= post.title %></span></strong>
+            <strong><i class="fa-solid fa-feather"></i><span> <%= post.title.truncate(9) %></span></strong>
           <% end %>
         </h4>
         <h6 id="post_<%= post.id %>"><%= post.created_at.strftime('%Y/%m/%d') %>
