--- a/app/views/public/users/_favorite_posts.html.erb
+++ b/app/views/public/users/_favorite_posts.html.erb
@@ -5,11 +5,11 @@
     <div class="card mt-1 mr-2 ml-1 px-0 shadow-lg col-4">
       <%= image_tag post.get_post_image(300, 300), class: "card-img-top index-img" %>
       <div class="card-body">
-        <h4 class="card-title">
+        <h5 class="card-title">
           <%= link_to post_path(post.id), class: "text-dark" do %>
-            <strong><i class="fa-solid fa-feather"></i><span> <%= post.title %></span></strong>
+            <strong><i class="fa-solid fa-feather"></i><span> <%= post.title.truncate(9) %></span></strong>
           <% end %>
-        </h4>
+        </h5>
         <h6 id="post_<%= post.id %>"><%= post.created_at.strftime('%Y/%m/%d') %>
           <br><span class="comments-count">コメント数:<%= post.post_comments.count %></span>
           <br><span class="favorite-btn"><%= render "public/favorites/btn", post: post %></span>
