--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -37,7 +37,7 @@
   <% @owner = User.find(group.owner_id)  %>
 
     <!--<div class="card w-200 mx-auto mt-4 h-500 shadow-lg">-->
-    <div class="card mt-1 mr-2 ml-1 mb-1 px-0 shadow-lg col-4">
+    <div class="card mt-1 mr-2 ml-1 mb-1 px-0 hover-color shadow-lg col-4">
       <%= image_tag group.get_image(300, 300), class: "card-img-top index-img" %>
       <div class="card-body">
         <h5 class="card-title">
@@ -121,6 +121,19 @@
 
   .font-small {
     font-size: 0.8rem;
+  }
+
+  .hover-color {
+    background-color: #FFFFFF;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all  0.3s ease;
+  }
+
+  .hover-color:hover {
+    background-color: #EEEEEE;
+    /*cursor: pointer;*/
   }
 
 
