--- a/app/views/public/users/_favorite_posts.html.erb
+++ b/app/views/public/users/_favorite_posts.html.erb
@@ -2,7 +2,7 @@
   <% count = 0 %>
   <% posts.each_with_index do |post, index| %>
    <% unless post.user.is_deleted %>
-    <div class="card mt-1 mr-2 ml-1 px-0 shadow-lg col-4">
+    <div class="card mt-1 mr-2 ml-1 px-0 hover-color shadow-lg col-4">
       <%= image_tag post.get_post_image(300, 300), class: "card-img-top index-img" %>
       <div class="card-body">
         <h5 class="card-title">
@@ -43,5 +43,18 @@
 
   .card {
     border-radius: 10px;
+  }
+
+  .hover-color {
+    background-color: #FFFFFF;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all  0.3s ease;
+  }
+
+  .hover-color:hover {
+    background-color: #EEEEEE;
+    /*cursor: pointer;*/
   }
 </style>
