--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -94,7 +94,7 @@
   <input type="checkbox" id="F">
   <label class="F" for="F">
     <h5 class="mt-3 text-center color">
-      <%= @user.name %>さんの<br>参加中コミュニティ <i class="fa-solid fa-chevron-down"></i>
+      <%= @user.name %>さんの<br>コミュニティ <i class="fa-solid fa-chevron-down"></i>
       <p id="click" class="tooltip10 text-primary">クリックで表示/非表示します</p>
     </h5>
 
