--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -35,9 +35,9 @@
     </div>
 
     <div class="image4 carousel-item">
-      <div class="container px-5 px-sm-0">
+      <div class="container-fluid px-5 px-sm-0">
         <div class='row d-flex align-items-center justify-content-center'>
-          <div class='col-md-12'>
+          <div class='col-md-7'>
             <h2 class="text-warning text-center mt-2">新着コミュニティ(3件)</h2>
               <%= render 'public/homes/top_groups', groups: @groups %>
           </div>
@@ -46,9 +46,9 @@
     </div>
 
     <div class="image5 carousel-item">
-      <div class="container px-5 px-sm-0">
+      <div class="container-fluid px-5 px-sm-0">
         <div class='row d-flex align-items-center justify-content-center'>
-          <div class='col-md-12'>
+          <div class='col-md-7'>
              <h2 class="text-warning text-center mt-2">新着投稿(3件)</h2>
                <%= render 'public/homes/top_posts', posts: @posts %>
           </div>
