--- a/app/views/public/homes/_top_posts.html.erb
+++ b/app/views/public/homes/_top_posts.html.erb
@@ -1,21 +1,21 @@
-<div class="card-deck mt-3s">
+<div class="card-deck mt-3">
   <% count = 0 %>
   <% posts.each_with_index do |post, index| %>
    <% unless post.user.is_deleted %>
-    <div class="card px-0 shadow-lg col-4">
+    <div class="card mt-1 mr-3 ml-2 mb-1 px-0 shadow-lg hover-color col-4">
       <%= image_tag post.get_post_image(200, 200), class: "card-img-top top-index-img" %>
       <div class="card-body">
-        <h4 class="card-title">
+        <h5 class="card-title">
           <%= link_to new_user_registration_path, class: "text-dark" do %>
             <strong><i class="fa-solid fa-feather"></i><span> <%= post.title.truncate(9) %></span></strong>
           <% end %>
-        </h4>
+        </h5>
         <h6 id="post_<%= post.id %>"><%= post.created_at.strftime('%Y/%m/%d') %>
           <br><span class="comments-count">コメント数:<%= post.post_comments.count %></span>
           <!--<br><span class="favorite-btn"><%#= render "public/favorites/btn", post: post %></span>-->
         </h6>
         <p class="card-text">説明:<%= post.body.truncate(10) %></p>
-        <span><i class="fas fa-user"></i> By<%= image_tag post.user.get_profile_image(30,30), class:"rounded-circle"; %><%= post.user.name %></span>
+        <span><i class="fas fa-user"></i> By<%= image_tag post.user.get_profile_image(30,30), class:"rounded-circle"; %><%= post.user.name.truncate(9) %></span>
       </div>
     </div>
     <% count = index + 1 %>
@@ -32,4 +32,16 @@
   /*.card-deck .card {*/
   /*  height: 400px;*/
   /*}*/
+  .hover-color {
+    background-color: #FFFFFF;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all  0.3s ease;
+  }
+
+  .hover-color:hover {
+    background-color: #EEEEEE;
+    /*cursor: pointer;*/
+  }
 </style>
