--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -6,6 +6,12 @@
     </div>
     <div class='col-md-8'>
       <h2 class="text-center">投稿一覧 <i class="fa-solid fa-square-pen"></i></h2>
+      <div class="container">
+        <div class="row justify-content-end mb-1">
+          <%#= render 'public/searches/form' %>
+          <%= render 'public/searches/genre_form' %>
+        </div>
+      </div>
       <div id="index-ajax">
         <%= render 'public/posts/index', posts: @posts, class: "mb-3" %>
       </div>
