--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -92,6 +92,12 @@
           <% end %>
         </li>
 
+        <li class="nav-item">
+          <%= link_to admin_reports_path, class: 'nav-link text-dark' do %>
+            <i class="fa-solid fa-triangle-exclamation" style="font-size: 16px; color: black;"></i> 通報一覧
+          <% end %>
+        </li>
+
         <!--<li class="nav-item">-->
         <!--  <%#= link_to 'コミュニティ一覧', admin_groups_path, class: 'nav-link text-dark' %>-->
         <!--</li>-->
