--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -4,7 +4,7 @@
     <tr>
       <%= image_tag user.get_profile_image(100, 100), class: "rounded-circle" %>
       <% if current_user != user %>
-        <span><%= link_to "通報", new_user_report_path(user), class: "btn btn-outline-danger" %></span>
+        <span><%= link_to "通報", new_user_report_path(user), class: "ml-3 btn btn-outline-danger" %></span>
       <% end %>
     </tr>
     <tr>
@@ -89,7 +89,7 @@
 
 <div class='row mt-1 d-flex align-items-center justify-content-center'>
   <% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
-    <%= link_to 'chatを始める', chat_path(user.id), class: "ml-3 btn btn-outline-warning" %>
+    <%= link_to 'chatを始める', chat_path(user.id), class: "ml-2 btn btn-outline-warning" %>
   <% end %>
   <% if current_user != user %>
     <span class="ml-2"><%= render "public/relationships/btn", user: user %></span>
